# acecode

./: .gitignore  README.md
RaspberryPi/: get_lan_ip.py  led.py  mail.conf.sample
RaspberryPi/car/: Car.py  Page.html  ds.py  main.py
RaspberryPi/lanip/: GetLanIp.py  getlanip
arduino/: InfraredReceiver.ino  README.md  Servo.ino  library.properties  tvir.ino
arduino/LightSensor/: LightSensor.ino
arduino/Sensors/: Sensors.ino
arduino/UltrasonicSensor/: UltrasonicSensor.ino
arduino/hardware/: README.md
arduino/light/: light.ino
arduino/rcv/: rcv.ino
arduino/src/: AceVest.h  font.cpp
beta/: Makefile  bochsrc
beta/boot/: Makefile  boot.c  elf.c  multiboot.S  multiboot.h
beta/include/: assert.h  elf.h  errno.h  stdarg.h  string.h
beta/kernel/: Makefile  clock.c  entry.S  exception.c  i8259.c  irq.c  kprintf.c  proc.c  setup.c  sysc_ipc.c  syscall.c  tables.c  utility.c
beta/lib/: Makefile
beta/scripts/: create_hd_img.sh  debug.sh  grub.cfg  grub.conf  link.ld  setup.sh
beta/servers/: Makefile
diying/: AlertMiBand.py  a.py  b.py
diying/mi/: Test.java  UserInfo.java
documents/: ATmega328P.md  ArduinoClockInterrupt.md  MySQLInjection.md  RISC-V.md  vim-plugin.md  遥控红外线编码.md
hardware/esp8266_wifi/: Makefile
ish/: BinaryTree.cc  Cmd.cc  Common.cc  Common.h  Debug.h  Parser.cc  Scanner.cc  StringBuffer.cc
ish/scripts/: a.sh  t_parser.sh
learn/: keyboard_interrupt.asm
learn/algorithm/: BinarySearch.cc  FullPermutation.cc  MaxSubMulti.cc
learn/arduino/: Fm.ino  IR.Send.ino  bluetoothinit.ino
learn/asm/: basic.txt
learn/cc/: string.cc
learn/db/: venus.sql
learn/doc/: Ace.Homebrew.itermcolors  GitHub2.Ace.css  GitHub2.Ace.pdf.css  board.txt  c.vim  cscope  ctags  dsniff  ettercap  github  hacktools  install  ir.txt  linux  linux_bash_profile  mac  mac_bash_profile  mbp_bash_profile  night.Ace.css  night.Ace.pdf.css  profile  tmux.conf  vimrc  zshrc
learn/go/: README  SimpleSvr.go  array.slice.map.go  clock.go  closure.go  doc.md  error.go  for.go  func.go  gocui_input.go  hello.go  if.go  install.txt  interfaces.go  iota.go  jzb48.go  logger.go  methods.go  panic.go  pattern.go  reflect.go  select.go  string.go  struct.go  switch.go  time_fmt_trans.go  ucos_vs_tos.go  var.go  variadicfunc.go
learn/h5/: ball1.html  ball2.htm
learn/jp/: JP.html
learn/leetcode/: 01.4.combinationSum.go  09.removeNthFromEnd.go
learn/lex/: a.l  b.l  build.pl  c.l
learn/libevent/: timer.c
learn/map/: china.html  datamaps.china.min.js  world.html
learn/markdown/: exploit_exercises_nebula.md  extra_markdown.md  index.md
learn/net/: arp.c  ethPktGen.c
learn/other/: Mine.cc
learn/perl/: control.pl  hash.pl  io.pl  regexp.pl  sorthash.pl  sub.pl  var.pl
learn/php/: a.php
learn/python/: Module.py  OptParse.py  cfg.conf  cfg.py  class.py  control.py  decorator.py  dict2object.py  dictionary.py  directory.py  exp.py  func.py  helloworld.py  image.py  lambda.py  list.py  mul.py  pyinotify.py  regexes.py  scapy.0.py  scapy.1.py  set.py  str.py  test.tcpcli0.py  test.tcpsvr0.py  test.udpcli0.py  testmodule.py  testusename.py  try.py  tuple.py  urllib.0.py  usename.py  usesys.py  utils.py  var.py
learn/server/: BUILD  (+3 more)
learn/test/ppy/: Makefile.am  Makefile.in  config.status  configure  configure.in  ppy.h
learn/test/ppy/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
learn/test/ppy/samples/: Exception.cc  Makefile.am  Makefile.in  Mutex.cc  Singleton.cc  TcpSocketClient.cc  TcpSocketServer.cc
learn/test/ppy/src/: AbstractSocket.h  Exception.cc  Exception.h  IPC.h  IPv4Address.cc  IPv4Address.h  Makefile.am  Makefile.in  Mutex.cc  Mutex.h  Singleton.h  SocketAddress.h  TcpSocket.cc  TcpSocket.h  Utility.h  ppystdint.h
lib/: RingBuffer.cpp
md/: a.md
rtos/: CMakeLists.txt  Kconfig  Makefile  README.md  entry.S  rtos.c  rtos_config.h.in  sdkconfig.old
rtos/components/: CMakeLists.txt
rtos/components/debug/: CMakeLists.txt  asm_debug.S  debug.c
rtos/components/kernel/: Kconfig.projbuild
rtos/components/test/: main.c  test.c
rtos/components/utils/: CMakeLists.txt  debug.S  debug.c  debug.h  utils.h
rtos/kernel/: CMakeLists.txt
rtos/kernel/include/: FreeRTOSConfig.h  portmacro.h
rtos/main/: ..config.tmp  .config.old  main.c  makefile
rtos/make/: Kconfig.projbuild  bak.project.mk  component_wrapper.mk  makefile  project.mk  project_config.mk
rtos/tools/kconfig/: .config  conf  conf.d  mconf  mconf.d  zconf.hash.c  zconf.lex.c  zconf.tab.c  zconf.tab.d
rtos/tools/kconfig/lxdialog/: checklist.d  inputbox.d  menubox.d  textbox.d  util.d  yesno.d
tools/: GetWanIP.py  Makefile  NetDetector.py  cls  htc.c
(+438 files in other folders)
